# catgo-LRG

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  citation.cff  contributing.md  contributing.zh.md  deno.json  deno.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  readme.zh.md  svelte.config.js  tsconfig.json  vite-plugin-agent-bridge.ts  vite.shared.ts  vitest.config.ts
.acoord_research/: bond.test.mts  bond.ts  bondSchemes.ts  bondService.ts  periodic_bond_outside_cell.test.mts  poscarParser.ts  renderMessageBuilder.ts  renderer-types.ts  renderer.ts  structure.ts  trajectoryManager.ts  unitCell.ts  unitCellService.ts  wire.ts  xdatcarParser.ts
.gemini/: settings.json
catbot-plugin/: .mcp.json  settings.json
desktop/: App.svelte  Sidebar.svelte  TabBar.svelte  WorkflowView.svelte  index.html  pane-utils.ts  settings.ts  sidebar-data.ts  sidebar-utils.ts  svelte.config.js  tsconfig.json
docs/: DEBUG_LOG_2026-03-02.md  DEVELOPMENT_GUIDE.md  catgo-learning-guide.md  catgo_graph_kernel_stability.md  catgo_graph_vision.md  catgo_recipe_catalog.md  catgo_runtime_requirements.md  catgo_rust_runtime_architecture.md  catgo_student_usage_guide.md  catgo_unified_workflow_architecture.md  catgo_workflow_capabilities.md  index.md  (+4 more)
extensions/dos-analysis/: README.md  pyproject.toml
extensions/dos-analysis/catgo_dos/: __init__.py  dband.py  io.py  orbital.py  pdos.py  selection.py
extensions/uff-relax/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
extensions/uff-relax/src/: cell.rs  lib.rs  math.rs  optimizer.rs  spatial.rs
extensions/uff-relax/src/atom/: mod.rs
extensions/uff-relax/src/forcefield/: interactions.rs  mod.rs  parallel.rs  sequential.rs
extensions/uff-relax/src/params/: data.rs  mod.rs
extensions/vsepr-rs/: Cargo.toml  README.md
extensions/vsepr-rs/src/: forcefield.rs  lib.rs  math.rs  optimizer.rs  traits.rs  vsepr.rs
(+1358 files in other folders)
